Closed Bug 1216580 Opened 9 years ago Closed 9 years ago

background-attachment:fixed clip stealing doesn't work for display items that create their own layer

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox44 --- affected
firefox45 --- fixed
b2g-v2.5 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached file testcase
STR: 1. Set the pref layout.gpu-image-scaling.enabled=true and restart. 2. Open the testcase. 3. Notice that the rounded corners are missing.
Bug 1216580 - Make background-position:fixed clip stealing work with display items that create their own layer. r?mattwoodrow
Attachment #8679480 - Flags: review?(matt.woodrow)
Comment on attachment 8679480 [details] MozReview Request: Bug 1216580 - Make background-position:fixed clip stealing work with display items that create their own layer. r?mattwoodrow https://reviewboard.mozilla.org/r/23423/#review20953
Attachment #8679480 - Flags: review?(matt.woodrow) → review+
I was missing a " + mParameters.mOffset" in the calculation of layerClipRect. Adding that fixes a few reftests.
https://hg.mozilla.org/integration/mozilla-inbound/rev/c1fa0502aa5da1a9dafaa6aa35e902a66473a89c Bug 1216580 - Make background-position:fixed clip stealing work with display items that create their own layer. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: