Bug 1216580 - Make background-position:fixed clip stealing work with display items that create their own layer. r=mattwoodrow